Missing parentheses in is_size_aligned_ macro

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • None
    • gc
    • b21

      Mikael G found that we're missing parentheses in the is_size_aligned_ macro (soon to be renamed is_aligned):
      ===
      I looked through this and I think it looks good but I think you may need to add some extra brackets around the use of the parameters in is_size_aligned_

      change
      #define is_size_aligned_(size, alignment) ((size) == (align_size_up_(size, alignment)))

      to
      #define is_size_aligned_(size, alignment) ((size) == (align_size_up_((size), (alignment))))
      ===

            Assignee:
            Stefan Karlsson
            Reporter:
            Stefan Karlsson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: