8183544: Missing parentheses in is_size_aligned_ macro

Reviewed-by: mgerdin, tschatzl