hotspot/src/share/vm/utilities/globalDefinitions.hpp
@@ -518,7 +518,7 @@ const bool support_IRIW_for_not_multiple_copy_atomic_cpu = false;
 
 #define align_up_(size, alignment) (align_down_((size) + align_mask(alignment), (alignment)))
 
-#define is_aligned_(size, alignment) ((size) == (align_up_(size, alignment)))
+#define is_aligned_(size, alignment) ((size) == (align_up_((size), (alignment))))
 
 // Temporary declaration until this file has been restructured.
 template <typename T>
